# ESP32-8048S050-Fancy-Board

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  common_types.h  dashboard_data.h  dashboard_main.c
main/lvgl/: lvgl_setup.c  lvgl_setup.h
main/serial/: serial_data_handler.c  serial_data_handler.h
main/smart/: entity_states_parser.c  entity_states_parser.h  ha_api.c  ha_api.h  ha_status.c  ha_status.h  ha_sync.c  ha_sync.h  ha_task_manager.c  ha_task_manager.h  smart_config_template.h  smart_home.c  smart_home.h
main/touch/: gt911_touch.c  gt911_touch.h
main/ui/: system_monitor.c  system_monitor.h  ui_config.c  ui_config.h  ui_controls_panel.c  ui_controls_panel.h  ui_cpu_panel.c  ui_cpu_panel.h  ui_dashboard.c  ui_dashboard.h  ui_gpu_panel.c  ui_gpu_panel.h  ui_helpers.c  ui_helpers.h  ui_memory_panel.c  ui_memory_panel.h  ui_status_info.c  ui_status_info.h
main/utils/: crash_handler.c  crash_handler.h  crash_log_manager.c  crash_log_manager.h  crash_test_suite.py  system_debug_utils.c  system_debug_utils.h
main/wifi/: wifi_config_template.h  wifi_manager.c  wifi_manager.h
