idf_component_register(SRCS "dashboard_main.c"
                           "lvgl/lvgl_setup.c"
                           "ui/ui_config.c"
                           "ui/ui_dashboard.c"
                           "ui/ui_helpers.c"
                           "ui/ui_cpu_panel.c"
                           "ui/ui_gpu_panel.c"
                           "ui/ui_memory_panel.c"
                           "ui/ui_status_info.c"
                           "ui/ui_controls_panel.c"
                           "serial/serial_data_handler.c"
                           "touch/gt911_touch.c"
                           "wifi/wifi_manager.c"
                           "smart/ha_api.c"
                           "smart/ha_status.c"
                           "smart/smart_home.c"
                           "smart/entity_states_parser.c"
                           "utils/system_debug_utils.c"
                       INCLUDE_DIRS "." "lvgl" "ui" "serial" "touch" "wifi" "smart" "utils"
                       REQUIRES lvgl__lvgl esp_lcd driver json esp_wifi esp_netif esp_http_client nvs_flash mbedtls)
